# Bag-of-tricks-for-Transformers

./: .gitignore  EXP_ERRATA.md  README.md  TRICK_SUMMARY_TRAIN_ARCH.md  nanogpt-speedrun  parameter-golf  pyproject.toml  run_all_ablations.sh  slowrun  temp_exp.md
.tmp/run_all_refactored/: baseline-medium-fixed_time_20min.json  baseline-medium-fixed_tokens_10b.json  baseline-small-fixed_time_20min.json  baseline-small-fixed_tokens_10b.json  kv-sharing-dwide-mlp-medium-fixed_time_20min.json  kv-sharing-dwide-mlp-medium-fixed_tokens_10b.json  kv-sharing-dwide-mlp-small-fixed_time_20min.json  kv-sharing-dwide-mlp-small-fixed_tokens_10b.json  loop-share-all-medium-fixed_time_20min.json  loop-share-all-medium-fixed_tokens_10b.json  loop-share-all-small-fixed_time_20min.json  loop-share-all-small-fixed_tokens_10b.json  loop-share-first-medium-fixed_time_20min.json  loop-share-first-medium-fixed_tokens_10b.json  loop-share-first-small-fixed_time_20min.json  loop-share-first-small-fixed_tokens_10b.json  loop-share-mid-medium-fixed_time_20min.json  loop-share-mid-medium-fixed_tokens_10b.json  loop-share-mid-small-fixed_time_20min.json  (+13 more)
data/: cached_challenge_fineweb.py  tokenize_fineweb_edu_gpt2.py
exp/: run_experiments.py
exp/geglu/: README.md  (+4 more)
logs/: result.json
scripts/: run_add_tricks.sh  run_all_medium_ablation.sh  run_all_refactored.sh  run_all_small_ablation.sh  run_batch_tricks.sh  run_batch_tricks_wjx.sh  sync_wandb_runs.sh  test_refactor_alignment.sh
trainlib/: dataloader.py  hyperparameters.py  optimizer.py  transformer.py  validation.py
wandb/: latest-run
(+1152 files in other folders)
