[build-system]
requires = ["setuptools>=70.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bag_of_tricks_for_transformers"
version = "0.1.0"
description = "Training and data preparation scripts for the parameter-golf project."
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==2.4.4",
    "tqdm==4.67.3",
    "torch==2.8.0",
    "huggingface-hub==1.8.0",
    "kernels==0.12.3",
    "setuptools==70.2.0",
    "typing-extensions==4.15.0",
    "datasets==4.8.4",
    "tiktoken==0.12.0",
    "sentencepiece==0.2.1",
    "wandb==0.25.1",
]

[tool.uv]
package = false
